# SanityPrint

./: Build.PL  BuildLinux.sh  BuildLinux_clang.sh  CMakeLists.txt  CMakePresets.json  DockerBuild.sh  DockerRun.sh  Dockerfile  README.md  SECURITY.md  build_release_macos.sh  build_vs2022_unified.bat  license.rtf  license_en.rtf  orca_build_release.bat  parameterize-filament-types-prompt.md  project_build.bat  run_creality_on_e_cores.bat  run_gettext.bat  run_gettext.sh  test_build.bat  version.inc
.devcontainer/: devcontainer.json
.devcontainer/ubuntu20.04/: devcontainer.json
.devcontainer/ubuntu24.04/: devcontainer.json
.run/: CrealityPrint.run.xml  SanityPrint.run.xml
clang-tidy/: compile_commands.json
cmake/: BuildInfoUtil.cmake
cmake/modules/: MacOSXBundleInfo.plist.in  NSIS.template.in
compare_3mf/: CMakeLists.txt
doc/: Auxiliary-fan.md  Calibration.md  Chamber-temperature.md  Extrusion-rate-smoothing.md  Home.md  Localization_guide.md  Precise-wall.md  adaptive-bed-mesh.md  air-filtration.md  semm.md
doc/bugfixes/: bug-12890-bridge-start-path-gap.md  bug-13645-slice-stuck-at-25-percent.md  bug-13688-gcode-rename-upload-path-md5.md  bug-13999-params-dialog-high-dpi-oversize.md  bug-14541-topbar-file-name-display.md  bug-14588-fluidd.md  bug-14639-single-color-preview-flush-merge.md  bug-14668-add-total-consumable-consumption.md  bug-14677-name-tag-flicker.md  bug-14766-add-boost-log-core-header.md  bug-14826-preview-print-weight-mismatch.md  bug-14914-privacy-dialog-process-killed.md  bug-14930-single-color-unexpected-wipe-tower.md  bug-14958-region-switch-model-library-black-screen.md  bug-14988-raft-visible-without-support.md  bug-15039-invalid-param-crash-stack-enhance.md  bug-15042-params-dialog-125-percent-scale-oversize.md  bug-15053-preview-missing-flushed-display.md  bug-15072-marlin2-time-estimation.md  bug-15095-high-dpi-filament-popup-width.md  bug-15102-meshboolean-disable-arrow-move.md  bug-15149-topbar-high-dpi-icon-title-display.md  bug-15157-variable-layer-height-resize-misalignment.md  bug-15214-webview2-repair-dialog-repeat.md  bug-15227-meshboolean-reset-crash.md  bug-15261-15262-15333-15444-hotupdate-dialog-ordering.md  bug-15284-preview-multi-plate-flush-time-missing.md  bug-15321-close-send-page-crash.md  bug-15363-3mf-version-prompt.md  bug-15418-new-param-missing-translation.md  (+8 more)
docs/: material-sync-field-contract.md
flatpak/: entrypoint  io.github.gnydick.SanityPrint.metainfo.xml  io.github.gnydick.SanityPrint.yml  io.github.softfever.OrcaSlicer.metainfo.xml
lib/: Slic3r.pm
linux.d/: arch
package/: mac_resources.sh  macx.cmake  package.cmake  squirrel.cmake
parameter_history/: 6.0.0.beta1-5.1.6.compare.csv  6.0.0.beta1.metas.csv  test.metas.csv
scripts/: migrate_builtin_filament_profiles.py  recolor_blue_steel.py  rename_app.py
src/: CMakeLists.txt  CrealityrintDump.cpp  Crealityrint_dump.cpp  Crealityrint_dump.hpp  CxMiniDump.cpp  SanityPrint.cpp  SanityPrint_app_msvc.cpp  SanityPrint_profile_validator.cpp
tests/engine/: CMakeLists.txt
tests/libslic3r/: CMakeLists.txt  test_filament_type_registry.cpp
(+324 files in other folders)
